[package]
name = "postgres_large_object"
version = "0.4.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Large object support for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-large-object"
documentation = "https://sfackler.github.io/rust-postgres-large-object/doc/v0.4.0/postgres_large_object"
readme = "README.md"
keywords = ["database", "sql", "postgres"]

[dependencies]
postgres = "0.11"
