[package]
name = "postgres_large_object"
version = "0.7.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Large object support for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-large-object"
readme = "README.md"
keywords = ["database", "sql", "postgres"]

[dependencies]
postgres = "0.15"
